tests/baselines/reference/exportAssignmentTopLevelEnumdule.errors.txt
foo_0.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== foo_1.ts (0 errors) ====
    import foo = require("./foo_0");
    var color: foo;
    if(color === foo.green){
    	color = foo.answer;
    }
    
==== foo_0.ts (1 errors) ====
    enum foo {
    	red, green, blue
    }
    module foo {
           ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	export var answer = 42;
    }
    export = foo;
    